--- a/Web/wwwroot/index.html
+++ b/Web/wwwroot/index.html
@@ -992,7 +992,7 @@
           <div class="card-head">
             <div class="title">
               <h2>Всички клиенти</h2>
-              <div class="hint">Вашите клиенти, подредени по последни фактури</div>
+              <div class="hint">Вашите клиенти</div>
             </div>
             <div style="display:flex; gap:8px; align-items:center;">
               <button class="btn" id="btnBackFromAllClients">Назад</button>
