Minor ui padding and background fixes

--- a/Web/wwwroot/index.html
+++ b/Web/wwwroot/index.html
@@ -36,6 +36,8 @@
       background: radial-gradient(1200px 600px at 20% -10%, rgba(34,193,195,.10), transparent 50%),
                   radial-gradient(900px 600px at 90% -10%, rgba(124,58,237,.10), transparent 45%),
                   var(--bg);
+      background-attachment: fixed;
+      background-repeat: no-repeat;
     }
 
     /* Layout */
@@ -536,7 +538,7 @@
     }
 
     .legacy-banner{
-      margin: 0 14px 12px;
+      margin: 14px 14px 12px;
       padding: 10px 14px;
       border-radius: 10px;
       background: rgba(100,116,139,.12);
