Change invoice template to not have seller name in the header but instead display the required "Original"/"Оригинал" text

--- a/Invoices/design/template.html
+++ b/Invoices/design/template.html
@@ -164,13 +164,6 @@
             line-height: 1.05;
         }
 
-        .company-line {
-            margin-top: 6px;
-            font-weight: 750;
-            font-size: 14px;
-            color: #111827;
-        }
-
         .meta {
             display: grid;
             @media print {
@@ -542,7 +535,7 @@
             <div class="header-grid">
                 <div>
                     <h1 class="doc-title" id="docTitle">ФАКТУРА</h1>
-                    <div class="company-line" id="sellerNameTop">"СМТЛ Спарк 3Дент" ООД</div>
+                    <div class="meta-row date" style="margin-top: 6px;"><span class="k">Оригинал</span></div>
                 </div>
 
                 <div class="meta" aria-label="Invoice meta">
